Fix 'Scroll Down to Continue' acting strangely on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 html, body, #root {
-    min-height: 100vh;
+    min-height: 100%;
 }
 
 p a {
